add docker 'latest' version again (for master)
searchseco/controller:master is additionally pushed to docker-hub as searchseco/controller:latest. re #58,

--- a/.github/workflows/image_build.yml
+++ b/.github/workflows/image_build.yml
@@ -24,9 +24,18 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Build and push
+        name: Build and push searchseco/controller:${{ github.ref_name }}
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: searchseco/controller:${{ github.ref_name }}
+      -
+        if: github.ref_name == 'master'
+        name: Build and push searchseco/controller:latest
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: searchseco/controller:latest
+      
